--- a/rainyun/web/static/index.html
+++ b/rainyun/web/static/index.html
@@ -147,7 +147,6 @@
                     </div>
                   </div>
                 </label>
-                <button id="save-settings" class="primary-btn full">保存设置</button>
               </div>
             </div>
             <div class="card">
@@ -206,6 +205,18 @@
                     <span>Telegram API Host（可选）</span>
                     <input id="notify-tg-host" placeholder="https://api.telegram.org" />
                   </label>
+                  <label class="field">
+                    <span>Telegram 代理 Host（可选）</span>
+                    <input id="notify-tg-proxy-host" placeholder="127.0.0.1" />
+                  </label>
+                  <label class="field">
+                    <span>Telegram 代理端口（可选）</span>
+                    <input id="notify-tg-proxy-port" placeholder="7890" />
+                  </label>
+                  <label class="field full">
+                    <span>Telegram 代理认证（可选）</span>
+                    <input id="notify-tg-proxy-auth" placeholder="user:pass" />
+                  </label>
                 </div>
                 <div id="notify-fields-pushplus" class="notify-fields hidden">
                   <label class="field">
@@ -216,11 +227,307 @@
                     <span>PushPlus 群组编码（可选）</span>
                     <input id="notify-pushplus-user" placeholder="group code" />
                   </label>
+                  <label class="field">
+                    <span>PushPlus 模板（可选）</span>
+                    <input id="notify-pushplus-template" placeholder="html / markdown / txt" />
+                  </label>
+                  <label class="field">
+                    <span>PushPlus 渠道（可选）</span>
+                    <input id="notify-pushplus-channel" placeholder="wechat / webhook / cp / mail / sms" />
+                  </label>
+                  <label class="field">
+                    <span>PushPlus Webhook（可选）</span>
+                    <input id="notify-pushplus-webhook" placeholder="webhook code" />
+                  </label>
+                  <label class="field">
+                    <span>PushPlus 回调地址（可选）</span>
+                    <input id="notify-pushplus-callback" placeholder="https://example.com/callback" />
+                  </label>
+                  <label class="field">
+                    <span>PushPlus To（可选）</span>
+                    <input id="notify-pushplus-to" placeholder="好友令牌或企业微信用户ID" />
+                  </label>
                 </div>
                 <div id="notify-fields-bark" class="notify-fields hidden">
                   <label class="field full">
                     <span>Bark 推送地址</span>
                     <input id="notify-bark-push" placeholder="https://api.day.app/xxxx" />
+                  </label>
+                  <label class="field">
+                    <span>Bark 是否存档（可选）</span>
+                    <input id="notify-bark-archive" placeholder="true / false" />
+                  </label>
+                  <label class="field">
+                    <span>Bark 分组（可选）</span>
+                    <input id="notify-bark-group" placeholder="group" />
+                  </label>
+                  <label class="field">
+                    <span>Bark 声音（可选）</span>
+                    <input id="notify-bark-sound" placeholder="sound" />
+                  </label>
+                  <label class="field">
+                    <span>Bark 图标（可选）</span>
+                    <input id="notify-bark-icon" placeholder="https://example.com/icon.png" />
+                  </label>
+                  <label class="field">
+                    <span>Bark 时效性（可选）</span>
+                    <input id="notify-bark-level" placeholder="active / timeSensitive / passive" />
+                  </label>
+                  <label class="field">
+                    <span>Bark 跳转链接（可选）</span>
+                    <input id="notify-bark-url" placeholder="https://example.com" />
+                  </label>
+                </div>
+                <div id="notify-fields-dingding_bot" class="notify-fields hidden">
+                  <label class="field">
+                    <span>钉钉 Bot Token</span>
+                    <input id="notify-dd-token" placeholder="access_token" />
+                  </label>
+                  <label class="field">
+                    <span>钉钉 Bot Secret</span>
+                    <input id="notify-dd-secret" placeholder="secret" />
+                  </label>
+                </div>
+                <div id="notify-fields-feishu_bot" class="notify-fields hidden">
+                  <label class="field">
+                    <span>飞书 Webhook Key</span>
+                    <input id="notify-fs-key" placeholder="FSKEY" />
+                  </label>
+                  <label class="field">
+                    <span>飞书签名密钥（可选）</span>
+                    <input id="notify-fs-secret" placeholder="FSSECRET" />
+                  </label>
+                </div>
+                <div id="notify-fields-go_cqhttp" class="notify-fields hidden">
+                  <label class="field full">
+                    <span>Go-CQHTTP 地址</span>
+                    <input id="notify-gobot-url" placeholder="http://127.0.0.1/send_private_msg" />
+                  </label>
+                  <label class="field full">
+                    <span>推送目标</span>
+                    <input id="notify-gobot-qq" placeholder="user_id=123456 或 group_id=654321" />
+                  </label>
+                  <label class="field full">
+                    <span>Access Token（可选）</span>
+                    <input id="notify-gobot-token" placeholder="access_token" />
+                  </label>
+                </div>
+                <div id="notify-fields-gotify" class="notify-fields hidden">
+                  <label class="field full">
+                    <span>Gotify 地址</span>
+                    <input id="notify-gotify-url" placeholder="https://push.example.com" />
+                  </label>
+                  <label class="field">
+                    <span>Gotify Token</span>
+                    <input id="notify-gotify-token" placeholder="token" />
+                  </label>
+                  <label class="field">
+                    <span>优先级（可选）</span>
+                    <input id="notify-gotify-priority" placeholder="0" />
+                  </label>
+                </div>
+                <div id="notify-fields-igot" class="notify-fields hidden">
+                  <label class="field full">
+                    <span>iGot PUSH_KEY</span>
+                    <input id="notify-igot-key" placeholder="IGOT_PUSH_KEY" />
+                  </label>
+                </div>
+                <div id="notify-fields-pushdeer" class="notify-fields hidden">
+                  <label class="field">
+                    <span>PushDeer Key</span>
+                    <input id="notify-deer-key" placeholder="DEER_KEY" />
+                  </label>
+                  <label class="field">
+                    <span>PushDeer URL（可选）</span>
+                    <input id="notify-deer-url" placeholder="https://api2.pushdeer.com/message/push" />
+                  </label>
+                </div>
+                <div id="notify-fields-chat" class="notify-fields hidden">
+                  <label class="field full">
+                    <span>群晖 Chat URL</span>
+                    <input id="notify-chat-url" placeholder="https://chat.example.com/webapi/entry.cgi?api=SYNO.Chat.External&method=incoming&version=2&token=" />
+                  </label>
+                  <label class="field full">
+                    <span>群晖 Chat Token</span>
+                    <input id="notify-chat-token" placeholder="token" />
+                  </label>
+                </div>
+                <div id="notify-fields-weplus_bot" class="notify-fields hidden">
+                  <label class="field">
+                    <span>微加 Token</span>
+                    <input id="notify-weplus-token" placeholder="WE_PLUS_BOT_TOKEN" />
+                  </label>
+                  <label class="field">
+                    <span>接收者（可选）</span>
+                    <input id="notify-weplus-receiver" placeholder="receiver" />
+                  </label>
+                  <label class="field">
+                    <span>版本（可选）</span>
+                    <input id="notify-weplus-version" placeholder="pro" />
+                  </label>
+                </div>
+                <div id="notify-fields-qmsg_bot" class="notify-fields hidden">
+                  <label class="field">
+                    <span>Qmsg Key</span>
+                    <input id="notify-qmsg-key" placeholder="QMSG_KEY" />
+                  </label>
+                  <label class="field">
+                    <span>Qmsg Type</span>
+                    <input id="notify-qmsg-type" placeholder="send / group / push" />
+                  </label>
+                </div>
+                <div id="notify-fields-wecom_app" class="notify-fields hidden">
+                  <label class="field full">
+                    <span>企业微信应用配置</span>
+                    <input id="notify-wecom-am" placeholder="corpid,corpsecret,touser,agentid,media_id(可选)" />
+                  </label>
+                  <label class="field full">
+                    <span>企业微信代理（可选）</span>
+                    <input id="notify-wecom-origin" placeholder="https://qyapi.weixin.qq.com" />
+                  </label>
+                </div>
+                <div id="notify-fields-wecom_bot" class="notify-fields hidden">
+                  <label class="field full">
+                    <span>企业微信机器人 Key</span>
+                    <input id="notify-wecom-key" placeholder="QYWX_KEY" />
+                  </label>
+                  <label class="field full">
+                    <span>企业微信代理（可选）</span>
+                    <input id="notify-wecom-bot-origin" placeholder="https://qyapi.weixin.qq.com" />
+                  </label>
+                </div>
+                <div id="notify-fields-aibotk" class="notify-fields hidden">
+                  <label class="field">
+                    <span>智能微秘书 Key</span>
+                    <input id="notify-aibotk-key" placeholder="AIBOTK_KEY" />
+                  </label>
+                  <label class="field">
+                    <span>发送类型</span>
+                    <input id="notify-aibotk-type" placeholder="room / contact" />
+                  </label>
+                  <label class="field">
+                    <span>目标名称</span>
+                    <input id="notify-aibotk-name" placeholder="群名或好友昵称" />
+                  </label>
+                </div>
+                <div id="notify-fields-smtp" class="notify-fields hidden">
+                  <label class="field full">
+                    <span>SMTP 服务器</span>
+                    <input id="notify-smtp-server" placeholder="smtp.example.com:465" />
+                  </label>
+                  <label class="field">
+                    <span>SMTP SSL</span>
+                    <input id="notify-smtp-ssl" placeholder="true / false" />
+                  </label>
+                  <label class="field">
+                    <span>SMTP 邮箱</span>
+                    <input id="notify-smtp-email" placeholder="me@example.com" />
+                  </label>
+                  <label class="field">
+                    <span>SMTP 密码</span>
+                    <input id="notify-smtp-password" placeholder="password" />
+                  </label>
+                  <label class="field">
+                    <span>SMTP 发件人</span>
+                    <input id="notify-smtp-name" placeholder="Rainyun Bot" />
+                  </label>
+                </div>
+                <div id="notify-fields-pushme" class="notify-fields hidden">
+                  <label class="field">
+                    <span>PushMe Key</span>
+                    <input id="notify-pushme-key" placeholder="PUSHME_KEY" />
+                  </label>
+                  <label class="field">
+                    <span>PushMe URL（可选）</span>
+                    <input id="notify-pushme-url" placeholder="https://push.i-i.me/" />
+                  </label>
+                  <label class="field">
+                    <span>PushMe date（可选）</span>
+                    <input id="notify-pushme-date" placeholder="date" />
+                  </label>
+                  <label class="field">
+                    <span>PushMe type（可选）</span>
+                    <input id="notify-pushme-type" placeholder="type" />
+                  </label>
+                </div>
+                <div id="notify-fields-chronocat" class="notify-fields hidden">
+                  <label class="field full">
+                    <span>Chronocat URL</span>
+                    <input id="notify-chronocat-url" placeholder="http://127.0.0.1:16530" />
+                  </label>
+                  <label class="field full">
+                    <span>Chronocat Token</span>
+                    <input id="notify-chronocat-token" placeholder="token" />
+                  </label>
+                  <label class="field full">
+                    <span>目标QQ</span>
+                    <input id="notify-chronocat-qq" placeholder="user_id=123;group_id=456" />
+                  </label>
+                </div>
+                <div id="notify-fields-ntfy" class="notify-fields hidden">
+                  <label class="field">
+                    <span>Ntfy 地址</span>
+                    <input id="notify-ntfy-url" placeholder="https://ntfy.sh" />
+                  </label>
+                  <label class="field">
+                    <span>Ntfy Topic</span>
+                    <input id="notify-ntfy-topic" placeholder="topic" />
+                  </label>
+                  <label class="field">
+                    <span>Ntfy 优先级（可选）</span>
+                    <input id="notify-ntfy-priority" placeholder="3" />
+                  </label>
+                  <label class="field">
+                    <span>Ntfy Token（可选）</span>
+                    <input id="notify-ntfy-token" placeholder="token" />
+                  </label>
+                  <label class="field">
+                    <span>Ntfy 用户名（可选）</span>
+                    <input id="notify-ntfy-username" placeholder="username" />
+                  </label>
+                  <label class="field">
+                    <span>Ntfy 密码（可选）</span>
+                    <input id="notify-ntfy-password" placeholder="password" />
+                  </label>
+                  <label class="field full">
+                    <span>Ntfy Actions（可选）</span>
+                    <input id="notify-ntfy-actions" placeholder="action label=Open, url=https://example.com" />
+                  </label>
+                </div>
+                <div id="notify-fields-wxpusher_bot" class="notify-fields hidden">
+                  <label class="field">
+                    <span>WxPusher AppToken</span>
+                    <input id="notify-wxpusher-token" placeholder="appToken" />
+                  </label>
+                  <label class="field">
+                    <span>WxPusher Topic IDs（可选）</span>
+                    <input id="notify-wxpusher-topic" placeholder="10001;10002" />
+                  </label>
+                  <label class="field">
+                    <span>WxPusher UIDs（可选）</span>
+                    <input id="notify-wxpusher-uids" placeholder="UID_xxx;UID_yyy" />
+                  </label>
+                </div>
+                <div id="notify-fields-custom_notify" class="notify-fields hidden">
+                  <label class="field full">
+                    <span>Webhook URL</span>
+                    <input id="notify-webhook-url" placeholder="https://example.com/hook?title=$title&content=$content" />
+                  </label>
+                  <label class="field">
+                    <span>Webhook 方法</span>
+                    <input id="notify-webhook-method" placeholder="POST" />
+                  </label>
+                  <label class="field">
+                    <span>Content-Type（可选）</span>
+                    <input id="notify-webhook-content-type" placeholder="application/json" />
+                  </label>
+                  <label class="field full">
+                    <span>Webhook Headers（可选）</span>
+                    <textarea id="notify-webhook-headers" rows="3" placeholder="Authorization: Bearer xxx"></textarea>
+                  </label>
+                  <label class="field full">
+                    <span>Webhook Body（可选）</span>
+                    <textarea id="notify-webhook-body" rows="5" placeholder="title: $title&#10;content: $content"></textarea>
                   </label>
                 </div>
                 <div id="notify-fields-custom" class="notify-fields hidden">
@@ -290,6 +597,11 @@
                   <span>跳过推送标题（换行分隔）</span>
                   <textarea id="setting-skip-push-title" rows="3"></textarea>
                 </label>
+              </div>
+            </div>
+            <div class="card settings-footer">
+              <div class="form-grid">
+                <button id="save-settings" class="primary-btn full">保存设置</button>
               </div>
             </div>
           </div>
